- Minor changes to xml2xls.

--- a/util/xml2xls/InputForm.resx
+++ b/util/xml2xls/InputForm.resx
@@ -117,4 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="richTextBox1.Text" xml:space="preserve">
+    <value>This utility will convert spreadsheet files in the Excel SpreadsheetML format (.xml) to the Excel 1997-2003 binary format (.xls).  Select files by either browsing or dragging and dropping into this window.</value>
+  </data>
 </root>
