--- a/util/parsecs1/HelpForm.resx
+++ b/util/parsecs1/HelpForm.resx
@@ -154,11 +154,32 @@ NEWFEMS# .PRN- New Females
 CUMFEMS#.PRN - Cumulative Females
 DLYOVI#.PRN - Daily Oviposition</value>
   </data>
+  <data name="rtbUsage4.Text" xml:space="preserve">
+    <value>
+AGE.DEM - Age distribution
+POPULATN.PRN - Population growth
+SIMAREA.PRN - Simulation area
+MOSQ.PRN - Female mosquitoes
+MOSQSURV.PRN - Mosquito survival
+INFVMOSQ.PRN - Mosquitoes with virus in salivary glands
+EIP.PRN - EIP development rate
+MOSQWT.PRN - Mosquito wet weight
+MOSQPERS.PRN - Mosquitoes per person
+VIREMIC.PRN - Viremic persons
+GENERAL.SER - General seroprevalence
+DET1Y#D#.PRN - First 8 classes of detailed seroprevalence
+DET2Y#D#.PRN - Second 8 classes of detailed seroprevalence
+DET3Y#D#.PRN - Last 7 classes of detailed seroprevalence
+INFVBITE.PRN - Potential inoculations subject to susceptibility
+INCUBAT.PRN - Persons incubating virus
+WITHVIRS - Persons viremic and incubating
+NEWCASES.PRN - New cases</value>
+  </data>
   <data name="rtbUsage1.Text" xml:space="preserve">
-    <value>This program automates the process of combining various outputs from CIMSiM 1.0 (DOS) into meaningful collections of data as text files and/or spreadsheets.  Four different types of output are available, each composed of various graphs and/or tables which can be saved to disk from CS 1.0.
+    <value>This program automates the process of combining various outputs from CIMSiM 1.0 and DENSiM 1.0 (DOS) into meaningful collections of data as text files and/or spreadsheets.  Different types of output are available, each composed of various graphs and/or tables which can be saved to disk from CS 1.0 and DS 1.0.
 
-The tedium of manually saving output in CS 1.0 can be addressed by using an AutoHotKey script which automates the process.  This script also accounts for varying number of containers, and is able to save multiple pages/containers when neccesary.
+The tedium of manually saving output in CS 1.0 and DS 1.0 can be addressed by using an AutoHotKey script which automates the process.  This script also accounts for varying number of containers, years, etc.
 
-The types of output and required filenames are listed below.  Filenames with the character "#" refer to an index when multiple containers are in use in the simulation:</value>
+The types of output and required filenames are listed below with respect to CS 1.0 and DS 1.0.  Filenames with the character combinations of "C#", "Y#", and/or "D#", refer to the index for multiple containers, multiple years, and/or serotype index.</value>
   </data>
 </root>
